--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet": "^1.9.4",
     "skeleton-elements": "^4.0.1",
     "swiper": "^9.3.2"
   },
@@ -43,6 +44,7 @@
     "workbox-cli": "^7.0.0",
     "@types/node": "^20.3.0",
     "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4"
+    "@types/react-dom": "^18.2.4",
+    "@types/leaflet": "1.9.3"
   }
 }
