--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "leaflet-routing-machine": "^3.2.12",
     "leaflet": "^1.9.4",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
