--- a/package.json
+++ b/package.json
@@ -20,32 +20,33 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "axios": "^1.4.0",
     "dom7": "^4.0.6",
     "framework7": "^8.0.5",
     "framework7-icons": "^5.0.5",
     "framework7-react": "^8.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "material-icons": "^1.13.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "leaflet-routing-machine": "^3.2.12",
-    "leaflet": "^1.9.4",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^9.3.2",
-    "axios": "^1.4.0"
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
+    "@types/leaflet": "1.9.3",
+    "@types/leaflet-routing-machine": "^3.2.4",
+    "@types/node": "^20.3.0",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^4.0.0",
     "cpy-cli": "^4.2.0",
     "cross-env": "^7.0.3",
     "postcss-preset-env": "^8.4.2",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "workbox-cli": "^7.0.0",
-    "@types/node": "^20.3.0",
-    "@types/react": "^18.2.11",
-    "@types/react-dom": "^18.2.4",
-    "@types/leaflet": "1.9.3"
+    "workbox-cli": "^7.0.0"
   }
 }
