--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/leaflet": "1.9.3",
@@ -41,6 +42,7 @@
     "@types/node": "^20.3.0",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.0",
     "cpy-cli": "^4.2.0",
     "cross-env": "^7.0.3",
