Did some fixing and added the posibility to deploy to github pages

--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "version": "1.0.0",
   "description": "LocationBased-PWA",
+  "homepage": "https://stealerhd.github.io/LocationBased-PWA",
   "repository": "",
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d www",
     "start": "npm run dev",
     "check-types": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development vite",
@@ -46,6 +49,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "cpy-cli": "^4.2.0",
     "cross-env": "^7.0.3",
+    "gh-pages": "^5.0.0",
     "postcss-preset-env": "^8.4.2",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
