Updated manifest.json to work with my github pages update app.tsx to also correctly refare to the serviceworker.js

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "description": "LocationBased-PWA",
-  "homepage": "https://stealerhd.github.io/LocationBased-PWA",
+  "homepage": "https://stealerhd.github.io/LocationBased-PWA/",
   "repository": "",
   "license": "MIT",
   "type": "module",
