Did some refactoring and started adding comments - Added react-query to have a better handling of http request over axios - Added a script to create the manifest.json to create a manifest with the baseurl beeing / or the set base_path to correctly work with github pages deploy - Refactored Wiki component to be more type safe and added lazy loading to the image

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "generate-manifest": "node scripts/generate-manifest.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d www",
     "start": "npm run dev",
     "check-types": "tsc --noEmit",
-    "dev": "cross-env NODE_ENV=development vite",
-    "build": "cross-env NODE_ENV=production vite build && npx workbox generateSW workbox-config.cjs",
+    "dev": "npm run generate-manifest && cross-env NODE_ENV=development vite",
+    "build": "npm run generate-manifest && cross-env NODE_ENV=production vite build && npx workbox generateSW workbox-config.cjs",
     "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/"
   },
   "browserslist": [
@@ -23,6 +24,7 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "@tanstack/react-query": "^4.29.25",
     "axios": "^1.4.0",
     "dom7": "^4.0.6",
     "framework7": "^8.0.5",
